<resources>
    <string name="app_name">Sudoku Endless</string>

    <string name="label_digit_1">1</string>
    <string name="label_digit_2">2</string>
    <string name="label_digit_3">3</string>
    <string name="label_digit_4">4</string>
    <string name="label_digit_5">5</string>
    <string name="label_digit_6">6</string>
    <string name="label_digit_7">7</string>
    <string name="label_digit_8">8</string>
    <string name="label_digit_9">9</string>

</resources>
